# RoboCasa-RL

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ALGORITHM_FLOW.md  ATOMIC_TASK_USAGE.md  roadmap.md
env/: __init__.py  curriculum.py  custom_pnp_counter_to_cab.py
scripts/: eval_robocasa.py  run_baseline.sh  train_ppo_baseline.py  train_ppo_curriculum.py  train_ppo_reward_shaping.py  train_robocasa.py  visualize_custom_env.py
scripts/logs/baseline_seed0/PPO_1/: events.out.tfevents.1776009027.Ashitaka.251467.0
scripts/logs/baseline_seed0/env_0/: monitor.csv
scripts/logs/baseline_seed1/PPO_1/: events.out.tfevents.1776030465.Ashitaka.377407.0
scripts/logs/baseline_seed1/env_0/: monitor.csv
scripts/logs/baseline_seed2/PPO_1/: events.out.tfevents.1776041547.Ashitaka.432036.0
scripts/logs/baseline_seed2/env_0/: monitor.csv
scripts/logs/baseline_seed3/: metrics.csv
scripts/logs/baseline_seed3/PPO_1/: events.out.tfevents.1776052165.Ashitaka.486943.0
scripts/logs/baseline_seed3/env_0/: monitor.csv
scripts/logs/baseline_seed4/: metrics.csv
scripts/logs/baseline_seed4/PPO_1/: events.out.tfevents.1776062637.Ashitaka.544023.0
scripts/logs/baseline_seed4/env_0/: monitor.csv
